Add missing paragraph tag to Welcome post

--- a/_posts/2016-06-08-welcome.md
+++ b/_posts/2016-06-08-welcome.md
@@ -8,4 +8,6 @@
 
 My name is Adam Giese. I am a WordPress and front-end developer. I specialize in creating scalable SASS and fast, easy-to-use WordPress themes. 
 
-## What Are My Skills?
+## What Is This Blog About?
+
+This blog is about all things web development - tips & tricks for SASS, reviews of new development tools, utility functions for WordPress. If I think that it might help somebody, I'll write it!
